# cc-discussion

./: .env.example  .gitignore  .npmignore  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  start.sh  start_ui.py
.github/workflows/: release.yml
backend/: __init__.py  __main__.py  cli.py  main.py  websocket.py
backend/models/: __init__.py  database.py
backend/routers/: __init__.py  history.py  rooms.py  settings.py
backend/services/: __init__.py  codex_agent.py  codex_history_reader.py  discussion_orchestrator.py  history_reader.py  meeting_prompts.py  mention_parser.py  parallel_orchestrator.py  participant_agent.py  settings.py
docs/: autocoder-release-investigation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/e2e/: conversation-history.spec.ts
frontend/src/: App.tsx
frontend/src/components/: CreateRoomModal.tsx  ErrorBoundary.tsx  ParticipantAvatar.tsx  ToolSettingsModal.tsx
frontend/src/components/slack-ui/: ChannelSidebar.tsx  MessageGroup.tsx  MessageInput.tsx  MessageList.tsx  RoomHeader.tsx  StatusIndicator.tsx  index.ts
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: useRoomWebSocket.ts
frontend/src/lib/: api.ts  keyboard.ts  timeUtils.ts
frontend/src/pages/: HomePage.tsx  RoomPage.tsx
lib/: cli.js
scripts/: sync-version.sh
