[project]
name = "cc-discussion"
version = "1.0.0"
description = "Multi-Claude discussion platform with ClaudeCode context"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
