[project]
name = "cc-discussion"
version = "1.0.0"
description = "Multi-Claude discussion platform with ClaudeCode context"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "nogataka"}
]
keywords = ["claude", "discussion", "ai", "multi-agent", "codex", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.0.3"]
codex = ["codex-sdk-py>=0.0.3"]
all = [
    "claude-agent-sdk>=0.0.3",
    "codex-sdk-py>=0.0.3",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "build",
    "twine",
]

[project.scripts]
cc-discussion = "backend.cli:main"

[project.urls]
Homepage = "https://github.com/nogataka/cc-discussion"
Repository = "https://github.com/nogataka/cc-discussion"
Issues = "https://github.com/nogataka/cc-discussion/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.models", "backend.routers", "backend.services"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
